[gd_scene load_steps=35 format=2]

[ext_resource path="res://characters/enemies/mobs/harpy/assets/Harpy-Sheet.png" type="Texture" id=1]
[ext_resource path="res://characters/enemies/mobs/skeleton_warrior/assets/BarV6_Bar.png" type="Texture" id=2]
[ext_resource path="res://characters/enemies/mobs/skeleton_warrior/assets/BarV6_ProgressBar.png" type="Texture" id=3]
[ext_resource path="res://characters/enemies/mobs/harpy/scripts/HarpyBody.gd" type="Script" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.0
height = 30.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("attack_player/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "attack"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 24, 25, 26, 27 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("attack_player/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, false, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "death"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39, 40, 41, 41, 41, 41 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
resource_name = "fly"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11, 12 ]
}

[sub_resource type="Animation" id=6]
resource_name = "fly_faster"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=23]
resource_name = "hit"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31 ]
}

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "death"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "fly"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "fly_faster"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "hit"

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=29]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=30]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=18]
states/attack/node = SubResource( 7 )
states/attack/position = Vector2( 594, 39 )
states/death/node = SubResource( 8 )
states/death/position = Vector2( 843, 124 )
states/fly/node = SubResource( 9 )
states/fly/position = Vector2( 213, 231 )
states/fly_faster/node = SubResource( 10 )
states/fly_faster/position = Vector2( 230, 67 )
states/hit/node = SubResource( 24 )
states/hit/position = Vector2( 524, 303 )
transitions = [ "fly", "attack", SubResource( 11 ), "attack", "fly", SubResource( 12 ), "fly_faster", "attack", SubResource( 13 ), "attack", "fly_faster", SubResource( 14 ), "attack", "death", SubResource( 15 ), "fly_faster", "death", SubResource( 16 ), "fly", "death", SubResource( 17 ), "fly", "hit", SubResource( 25 ), "fly_faster", "hit", SubResource( 26 ), "attack", "hit", SubResource( 27 ), "hit", "attack", SubResource( 28 ), "hit", "fly_faster", SubResource( 29 ), "hit", "fly", SubResource( 30 ) ]
start_node = "fly"
end_node = "death"
graph_offset = Vector2( 0, -3.40001 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=19]

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 11, 14.5 )

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 11, 14.5 )

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 26.5, 10 )

[node name="HarpyBody" type="KinematicBody2D" groups=["Enemy"]]
collision_layer = 8
collision_mask = 81
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 7
vframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3, 5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/attack = SubResource( 3 )
anims/death = SubResource( 4 )
anims/fly = SubResource( 5 )
anims/fly_faster = SubResource( 6 )
anims/hit = SubResource( 23 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 18 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 19 )

[node name="detect_player" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="detect_player"]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( 20, 8.5 )
shape = SubResource( 20 )

[node name="attack_player" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_player"]
position = Vector2( 20, 8 )
shape = SubResource( 21 )
disabled = true

[node name="player_is_back" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_is_back"]
position = Vector2( -29.5, 5 )
shape = SubResource( 22 )

[node name="AccelRaycast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 221, 0 )
collision_mask = 4

[node name="Timer" type="Timer" parent="."]

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = -27.0
margin_top = -25.0
margin_right = 245.0
margin_bottom = -4.0
rect_scale = Vector2( 0.2, 0.2 )
max_value = 300.0
value = 300.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )
texture_progress_offset = Vector2( 3, 2 )

[connection signal="body_entered" from="detect_player" to="." method="_on_detect_player_body_entered"]
[connection signal="body_exited" from="detect_player" to="." method="_on_detect_player_body_exited"]
[connection signal="body_entered" from="attack_player" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="player_is_back" to="." method="_on_player_is_back_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
